# MasterServer

./: Cargo.toml
src/: logger.rs  main.rs
src/config/: mod.rs  structs.rs
src/routes/: get.rs  post.rs
src/servers/: mod.rs  structs.rs
