[package]
name = "masterserver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.5"
actix-cors = "0.7"
censor = "0.3"
serde-aux = "4.5.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
